engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apps_popup_error_state.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Apps
  Failed to load apps.


     App directory unavailable  Retry the failed app directory request, or press
                                Esc to continue
› 1. Retry                      Reload installed and available apps

  enter select · esc back
