engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__auto_review_denials_popup.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 210
expression: popup
---
  Auto-review Denials
  Select a denied action to approve.



  Action                    Rationale
› curl -sS --data-binary @… Would send a
                            local source
                            file to an
                            external
                            endpoint.

  enter select · esc back
