engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_govcloud_models.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Select Model and Effort


› 1. GPT-5.6 Terra (current)  Older balanced model for straightforward work.
  2. GPT-5.6 Luna             Older fast and efficient model.

  enter select · esc back
